--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     background-color: darkgray;
 }
 h1{
+    font-size: 4em;
     background-color: rgba(105, 212, 205, 0.559);
     border: solid 2mm black;
     padding: 50px;
@@ -18,7 +19,7 @@ button{
     color: rgb(105, 212, 205);
     font-size: 2em;
     cursor: pointer;
-    margin: 50px;
+    margin-top: 50px;
     background-color: rgb(0, 0, 0);
     width: 500px;
     height: 100px;
@@ -29,5 +30,36 @@ button:hover{
     background-color: rgba(105, 212, 205, 0.559);
     color: black;
     transition: ease-in-out 0.5s;
+
+}
+#information{
+    background-color: rgba(105, 212, 205, 0.559);
+    border: solid 2mm black;
+    margin-top: 50px;
+    padding: 50px;
+    border-radius: 20px;
+}
+#player,#skynet,#result{
+    text-align: center;
+}
+#result{
+    font-size: 2em;
+}
+#skynet .affichage-none{
+    visibility: hidden;
+}
+#result .affichage-none{
+    visibility: hidden;
+}
+#counter{
+    font-size: 3em;
+    font-weight: bold;
+}
+#counter{
+    border: solid 2mm rgb(0, 0, 0);
+    background-color: rgb(51, 50, 50);
+    padding: 0 50px;
+    margin-top: 50px;
+    border-radius: 20px;
 
 }
