--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,5 +62,30 @@ button:hover{
     padding: 0 50px;
     margin-top: 50px;
     border-radius: 20px;
+
+}
+@media (max-width: 550px){
+    h1{
+        font-size: 4em;
+        background-color: rgba(105, 212, 205, 0.559);
+        border: solid 2mm black;
+        padding: 30px;
+        border-radius: 20px;
+    }
+    button{
+        border:solid 2mm rgb(105, 212, 205);
+        color: rgb(105, 212, 205);
+        font-size: 2em;
+        cursor: pointer;
+        margin-top: 50px;
+        background-color: rgb(0, 0, 0);
+        width: 400px;
+        height: 100px;
+        border-radius: 20px;
+    }
+    #counter{
+        font-size: 2em;
+        font-weight: bold;
+    }
 
 }
