--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body{
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -9,7 +13,9 @@ body{
     background-color: darkgray;
 }
 h1{
+    font-family: 'Montserrat', sans-serif;
     font-size: 4em;
+    font-weight: bold;
     background-color: rgba(105, 212, 205, 0.559);
     border: solid 2mm black;
     padding: 50px;
