--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100Vh;
-    width: 100vw;
     background-color: darkgray;
 }
 h1{
@@ -38,16 +36,20 @@ button:hover{
     background-color: rgba(105, 212, 205, 0.559);
     color: black;
     transition: ease-in-out 0.5s;
-
+    
 }
 #information{
     background-color: rgba(105, 212, 205, 0.559);
     border: solid 2mm black;
     margin-top: 50px;
-    padding: 50px;
     border-radius: 20px;
 }
 #player,#skynet,#result{
+    display: block;
+    width: 100%;
+    color: rgb(105, 212, 205);
+    background-color: black;
+    border-radius: 10px;
     text-align: center;
 }
 #result{
@@ -69,11 +71,12 @@ button:hover{
     padding: 0 50px;
     margin-top: 50px;
     border-radius: 20px;
+    margin-bottom: 10px;
 
 }
 @media (max-width: 550px){
     h1{
-        font-size: 4em;
+        font-size: 2em;
         background-color: rgba(105, 212, 205, 0.559);
         border: solid 2mm black;
         padding: 30px;
@@ -82,16 +85,31 @@ button:hover{
     button{
         border:solid 2mm rgb(105, 212, 205);
         color: rgb(105, 212, 205);
-        font-size: 1.7em;
+        font-size: 1.3em;
         cursor: pointer;
         margin-top: 50px;
         background-color: rgb(0, 0, 0);
-        width: 400px;
+        width: 300px;
         height: 100px;
         border-radius: 20px;
     }
+    #information{
+        width: 300px;
+    }
+    #player,#skynet{
+        text-align: center;
+        font-size: 1em;
+    
+    }
+
+
+    #result{
+        font-size: 1.5em;
+    }
+
+
     #counter{
-        font-size: 2em;
+        font-size: 1.5em;
         font-weight: bold;
     }
 
