--- a/style.css
+++ b/style.css
@@ -41,14 +41,13 @@ button:hover{
 #information{
     background-color: rgba(105, 212, 205, 0.559);
     border: solid 2mm black;
+    width: 300px;
     margin-top: 50px;
     border-radius: 20px;
 }
 #player,#skynet,#result{
-    display: block;
-    width: 100%;
     color: rgb(105, 212, 205);
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     border-radius: 10px;
     text-align: center;
 }
